--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "erusev/parsedown": "^1.7",
         "guzzlehttp/guzzle": "^6.3",
         "jms/serializer-bundle": "^2.3",
         "nette/security": "^2.4",
