Heroku deploy improvements + updated docs
- post-install scripts were added, the database will be reset every deploy
- creations of .env was moved from composer.json
- the database will be reset every deploy
- listApi "action" was removed

--- a/app.json
+++ b/app.json
@@ -8,6 +8,9 @@
         "cleardb:ignite"
     ],
     "env": {
-      "APP_ENV": "dev"
+        "HEROKU": "TRUE"
+    },
+    "scripts": {
+        "postdeploy": "./heroku_postdeploy.sh"
     }
 }
