--- a/.env.dist
+++ b/.env.dist
@@ -13,5 +13,7 @@ APP_SECRET=671bbda14f52818d907ec919cfe6b8da
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+# Heroku compatibility fix
+# DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=$CLEARDB_DATABASE_URL
 ###< doctrine/doctrine-bundle ###
